--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Family</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Family</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -45,8 +45,8 @@
 
     <header class="bg-primary text-white">
       <div class="container text-center">
-        <h1>Welcome to Scrolling Nav</h1>
-        <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+        <h1>What is family for?</h1>
+        <p class="lead">A page that is dedicated to bring you answers as to why you put up with your family.</p>
       </div>
     </header>
 
@@ -54,14 +54,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
+            <h2 class="title">About this page</h2>
+            <p class="lead">This is a great page where you can visit to find reasons why not to murder your family members. Below are just a couple of reasons why you should not bodily or in anyother way harm any of your family members. The reasons being:</p>
+            <ol>
+              <li>They are your family</li>
+              <li>It is better to lead by example. When you start to harm others, what does that say about your character? </li>
+              <li>They will give you life experience on how to deal and work with individual who you do not necessarily get along with. You cannot murder your siblings just like you cannot murder your colleague(s). </li>
+              <li>Be honest with yourself, if you hurt them or got rid of them in some way, you would feel bad and miss them (not necessarily in that order with a few things added in betwewn). </li>
+              <li>The most important reason is the fact that they are your family. You are supposed to love them, cherish them, and protect them because life is too short otherwise. </li>
+            </ol>
+            <p>There may be more reasons to do than not to do, but all you need is one good reason not to. If you need a breather, find some place quiet to relax and listen to your feel good song. If you dont have one, you can borrow mine until you find one of your own. <a href="https://www.youtube.com/watch?v=ru0K8uYEZWw">Justin Timberlake - I Got This Feeling</a></p>
           </div>
         </div>
       </div>
@@ -69,12 +71,22 @@
 
     <section id="services" class="bg-light">
       <div class="container">
+          <h2 class="title">Family</h2>
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+          <div class="col-md-3 col-lg-4">
+            <a class="family-item d-block mx-auto">
+              <div class="family-item-caption d-flex position-absolute h-100 w-100">
+              </div>
+              <img class="img-fluid" src="../static/img/brothers-457237_640.jpg" alt="Family Bond">
+            </a>
           </div>
-        </div>
+          <div class="col-md-3 col-lg-4">
+            <a class="family-item d-block mx-auto">
+              <div class="family-item-caption d-flex position-absolute h-100 w-100">
+              </div>
+              <img class="img-fluid" src="../static/img/baby-2717347_640.jpg" alt="Family Love">
+            </a>
+          </div>
       </div>
     </section>
 
@@ -82,7 +94,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
+            <h2 class="title">Contact us</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
           </div>
         </div>
