--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
 
-    <header class="bg-primary text-white">
+    <header id="top" class="text-white">
       <div class="container text-center">
         <h1>What is family for?</h1>
         <p class="lead">A page that is dedicated to bring you answers as to why you put up with your family.</p>
@@ -74,19 +74,22 @@
           <h2 class="title">Family</h2>
         <div class="row">
           <div class="col-md-3 col-lg-4">
-            <a class="family-item d-block mx-auto">
-              <div class="family-item-caption d-flex position-absolute h-100 w-100">
-              </div>
               <img class="img-fluid" src="../static/img/brothers-457237_640.jpg" alt="Family Bond">
-            </a>
+              <p class="Txt">Family Bond</p>
           </div>
           <div class="col-md-3 col-lg-4">
-            <a class="family-item d-block mx-auto">
-              <div class="family-item-caption d-flex position-absolute h-100 w-100">
-              </div>
               <img class="img-fluid" src="../static/img/baby-2717347_640.jpg" alt="Family Love">
-            </a>
+              <p class="Txt">Family Love</p>
           </div>
+          <div class="col-md-3 col-lg-4">
+              <img class="img-fluid" src="../static/img/children-817365_640.jpg" alt="Sibling Love">
+              <p class="Txt">Sibling Love</p>
+          </div>
+          <div class="col-md-3 col-lg-4">
+              <img class="img-fluid" src="../static/img/team-spirit-2447163_640.jpg" alt="Family Support">
+              <p class="Txt">Family Support</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -95,7 +98,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="title">Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+            <p class="lead">If this page helped you in anyway, let us know. Even if it didn't, please feel free to explain why.</p>
           </div>
         </div>
       </div>
